added Lightning module

--- a/Jupyter_Notebooks/LOCAL ResNet Transformer testing.ipynb
+++ b/Jupyter_Notebooks/LOCAL ResNet Transformer testing.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ac14ae78",
+   "execution_count": 1,
+   "id": "a2bdea35",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting path:/Users/gregory/PROJECT_ML/PROJECT_AMINE/image-to-tex-OCR\n",
+      "Starting path:/Users/gregory/PROJECT_ML/PROJECT_AMINE/image-to-tex-OCR/Jupyter_Notebooks\n",
       "Current path:/Users/gregory/PROJECT_ML/PROJECT_AMINE/image-to-tex-OCR\n"
      ]
     }
@@ -33,8 +33,334 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "cb6a354d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Data.Data_Module import Data_Module\n",
+    "from Models.Printed_Tex_Transformer import ResNetTransformer\n",
+    "from Lightning_Models.Printed_Tex_Lit_Model import LitResNetTransformer\n",
+    "\n",
+    "import pytorch_lightning as pl\n",
+    "from pytorch_lightning import Trainer\n",
+    "from PIL import Image\n",
+    "import torch\n",
+    "from pytorch_lightning.loggers import TensorBoardLogger\n",
+    "from torchvision import transforms\n",
+    "from PIL import Image\n",
+    "from IPython.display import display, Math\n",
+    "\n",
+    "dev = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "48c3724e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate Data Module by uploading images and formulas\n",
+    "# images need to be in the folder Data/Data_Bank/generated_png_images\n",
+    "# formulas need to be in Data/Data_Bank/final_png_formulas.txt\n",
+    "# image filenames need to be in Data/Data_Bank/corresponding_png_images.txt\n",
+    "\n",
+    "dataset = Data_Module(stage = 'fit',\n",
+    "                 set_max_label_length = 256,\n",
+    "                 number_png_images_to_use_in_dataset=200*1000,\n",
+    "                 labels_transform='default',\n",
+    "                image_transform_name ='alb',\n",
+    "                 train_val_fraction = 0.95,\n",
+    "                   \n",
+    "                load_vocabulary = False,\n",
+    "\n",
+    "\n",
+    "                 batch_size = 64,\n",
+    "                num_workers = 10,\n",
+    "                data_on_gpu = False,\n",
+    "                )\n",
+    "\n",
+    "\n",
+    "# Generates DataFrame\n",
+    "dataset.prepare_dataframe()\n",
+    "\n",
+    "# prepeares the dataloaders with transformations and splits train/val\n",
+    "dataset.setup_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "14e74033",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vocabulary size: 179 \n",
+      "Max label length: 230 \n",
+      "Start <S> goes to index  0 \n",
+      "End <E> goes to index  1 \n",
+      "Padding <P> goes to index  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print( \n",
+    "    'Vocabulary size:',len(dataset.vocabulary),\n",
+    "    '\\nMax label length:', dataset.max_label_length,\n",
+    "    \"\\nStart <S> goes to index \",dataset.vocabulary['<S>'],\n",
+    "      \"\\nEnd <E> goes to index \",dataset.vocabulary['<E>'],\n",
+    "      \"\\nPadding <P> goes to index \",dataset.vocabulary['<P>'],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a3af284b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initiate the model\n",
+    "model = ResNetTransformer(dataset=dataset).to(dev)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c3101220",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-fcd35c0af3ef417b\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-fcd35c0af3ef417b\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%load_ext tensorboard \n",
+    "%tensorboard --logdir Models_Parameters_Log/"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0f20ece5",
+   "id": "942d7d25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mgmarus\u001b[0m (use `wandb login --relogin` to force relogin)\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: wandb version 0.13.7 is available!  To upgrade, please run:\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m:  $ pip install wandb --upgrade\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                Tracking run with wandb version 0.12.1<br/>\n",
+       "                Syncing run <strong style=\"color:#cdcd00\">balmy-firefly-3</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
+       "                Project page: <a href=\"https://wandb.ai/gmarus/image-to-tex-OCR\" target=\"_blank\">https://wandb.ai/gmarus/image-to-tex-OCR</a><br/>\n",
+       "                Run page: <a href=\"https://wandb.ai/gmarus/image-to-tex-OCR/runs/1okbnafd\" target=\"_blank\">https://wandb.ai/gmarus/image-to-tex-OCR/runs/1okbnafd</a><br/>\n",
+       "                Run data is saved locally in <code>/Users/gregory/PROJECT_ML/PROJECT_AMINE/image-to-tex-OCR/wandb/run-20221227_151223-1okbnafd</code><br/><br/>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "\n",
+      "  | Name     | Type               | Params\n",
+      "------------------------------------------------\n",
+      "0 | model    | ResNetTransformer  | 3.7 M \n",
+      "1 | loss_fn  | CrossEntropyLoss   | 0     \n",
+      "2 | val_cer  | CharacterErrorRate | 0     \n",
+      "3 | test_cer | CharacterErrorRate | 0     \n",
+      "------------------------------------------------\n",
+      "3.7 M     Trainable params\n",
+      "0         Non-trainable params\n",
+      "3.7 M     Total params\n",
+      "14.627    Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation sanity check: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/gregory/miniforge3/lib/python3.9/site-packages/pytorch_lightning/trainer/data_loading.py:393: UserWarning: The number of training samples (1) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n",
+      "  rank_zero_warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "faf2a91333b14b39876b7dd25414906c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "logger = TensorBoardLogger(\"Models_Parameters_Log\", name=\"Test_Run\")\n",
+    "lit_model = LitResNetTransformer(model=model)\n",
+    "\n",
+    "#use the lit_model to run with Trainer\n",
+    "trainer = Trainer(accelerator='cpu', devices=0,  max_epochs=2, logger=logger, auto_lr_find=True) #accumulate_grad_batches=2, overfit_batches=1, default_root_dir=\"lightning_logs/ResNet/checkpoints\"  \n",
+    "trainer.fit(model=lit_model, datamodule=dataset,)\n",
+    "\n",
+    "#add parameter below to trainer.fit to continue from a checkpoint\n",
+    "#ckpt_path='lightning_logs/Character_tokenizer_1/version_2/checkpoints/epoch=0-step=1294.ckpt'\n",
+    " #ckpt_path='lightning_logs/Character_tokenizer_1/version_4/checkpoints/epoch=15-step=20704.ckpt' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "698f3707",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "def save_dic(dic):\n",
+    "    filename = 'lightning_logs/256_character_1.json'\n",
+    "    with open(filename, 'w') as f:\n",
+    "        f.write(json.dumps(dic, default=str))\n",
+    "\n",
+    "def load_dic(filename):\n",
+    "    with open(filename) as f:\n",
+    "        dic = json.loads(f.read())\n",
+    "    return dic\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1de0dd5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save model\n",
+    "# torch.save(model.state_dict(), 'lightning_logs/256_character_1.pth')\n",
+    "\n",
+    "# save vocabulary\n",
+    "# save_dic(data.vocabulary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7faac9e",
+   "metadata": {},
+   "source": [
+    "### TESTS\n",
+    "In the cell below we pass input and target through the model and check inference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78c13b9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Helper Function to convert prediction labels to strings\n",
+    "def token_to_strings(tokens):\n",
+    "    mapping = dataset.vocabulary\n",
+    "    inverse_mapping =dataset.inverse_vocabulary\n",
+    "    s=''\n",
+    "    if tokens.shape[0] ==1:\n",
+    "        tokens = tokens[0]\n",
+    "    for number in tokens:\n",
+    "        letter = inverse_mapping[number.item()]\n",
+    "        s= s +\" \" + str(letter)\n",
+    "    return s\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33b863bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get image and label from train data -- change number for different ones\n",
+    "image_tensor, label = dataset.data_train[12]\n",
+    "transform = transforms.ToPILImage()\n",
+    "image = transform(image_tensor)\n",
+    "\n",
+    "print('\\nOriginal image and formula:')\n",
+    "display(image)\n",
+    "print(token_to_strings(label))\n",
+    "print('\\nPredicted formula: \\n')\n",
+    "with torch.no_grad():\n",
+    "    model.eval()\n",
+    "    prediction =  model.predict(image_tensor.unsqueeze(0).to(dev))\n",
+    "print(token_to_strings(prediction),'\\n')\n",
+    "print(display(Math(token_to_strings(prediction))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fbad7a3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab4ee271",
+   "id": "e401776d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -50,87 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77ad0bb2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7e21d17",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cdd26e10",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d662ca01",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2bbc1ae9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2795642",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d268ccfd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02d722f6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb0d7c9e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e2d2526",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78644fc9",
+   "id": "57120063",
    "metadata": {},
    "outputs": [],
    "source": []
