--- a/Jupyter_Notebooks/GPC_MODEL1_character_tokenizer.ipynb
+++ b/Jupyter_Notebooks/GPC_MODEL1_character_tokenizer.ipynb
@@ -102,7 +102,7 @@
     "                )\n",
     "\n",
     "\n",
-    "# Generates DataFrame\n",
+    "# Generates DataFrame and vocabulary, tokezniers etc\n",
     "dataset.prepare_data()\n",
     "\n",
     "# prepeares the dataloaders with transformations and splits train/val\n",
@@ -181,11 +181,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-c7ea33bb0ce364\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-cb217cdc4d22498f\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-c7ea33bb0ce364\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-cb217cdc4d22498f\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -227,8 +227,7 @@
     {
      "data": {
       "text/html": [
-       "wandb version 0.13.7 is available!  To upgrade, please run:\n",
-       " $ pip install wandb --upgrade"
+       "Tracking run with wandb version 0.13.7"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -240,7 +239,7 @@
     {
      "data": {
       "text/html": [
-       "Tracking run with wandb version 0.13.5"
+       "Run data is saved locally in <code>/home/tigranerfaceb/image-to-tex-OCR/wandb/run-20221228_192232-3cklu54e</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -252,19 +251,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/home/tigranerfaceb/image-to-tex-OCR/wandb/run-20221228_190530-3f1nj4ad</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href=\"https://wandb.ai/gmarus/image-to-tex-OCR/runs/3f1nj4ad\" target=\"_blank\">happy-sound-19</a></strong> to <a href=\"https://wandb.ai/gmarus/image-to-tex-OCR\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href=\"https://wandb.ai/gmarus/image-to-tex-OCR/runs/3cklu54e\" target=\"_blank\">fine-disco-21</a></strong> to <a href=\"https://wandb.ai/gmarus/image-to-tex-OCR\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -277,16 +264,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/tigranerfaceb/anaconda3/lib/python3.9/site-packages/torchmetrics/utilities/prints.py:36: UserWarning: Torchmetrics v0.9 introduced a new argument class property called `full_state_update` that has\n",
-      "                not been set for this class (CharacterErrorRate). The property determines if `update` by\n",
-      "                default needs access to the full metric state. If this is not the case, significant speedups can be\n",
-      "                achieved and we recommend setting this to `False`.\n",
-      "                We provide an checking function\n",
-      "                `from torchmetrics.utilities import check_forward_full_state_property`\n",
-      "                that can be used to check if the `full_state_update=True` (old and potential slower behaviour,\n",
-      "                default for now) or if `full_state_update=False` can be used safely.\n",
-      "                \n",
-      "  warnings.warn(*args, **kwargs)\n",
       "GPU available: True (cuda), used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
@@ -330,7 +307,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1af0502cbb44e78914eea3536f5ebca",
+       "model_id": "2f39753b1d724d7398669a9e85fa5488",
        "version_major": 2,
        "version_minor": 0
       },
@@ -365,7 +342,7 @@
     "import json\n",
     "\n",
     "def save_dic(dic):\n",
-    "    filename = 'lightning_logs/256_character_1.json'\n",
+    "    filename = 'Models_Parameters_Log/258_character_1.json'\n",
     "    with open(filename, 'w') as f:\n",
     "        f.write(json.dumps(dic, default=str))\n",
     "\n",
@@ -384,7 +361,7 @@
    "outputs": [],
    "source": [
     "# save model\n",
-    "# torch.save(model.state_dict(), 'lightning_logs/256_character_1.pth')\n",
+    "# torch.save(model.state_dict(), 'Models_Parameters_Log/256_character_1.pth')\n",
     "\n",
     "# save vocabulary\n",
     "# save_dic(dataset.vocabulary_char)"
