updated notebook GCP

--- a/Jupyter_Notebooks/GPC_MODEL1_character_tokenizer.ipynb
+++ b/Jupyter_Notebooks/GPC_MODEL1_character_tokenizer.ipynb
@@ -640,12 +640,11 @@
     "lit_model = LitResNetTransformer(model=model)\n",
     "\n",
     "#use the lit_model to run with Trainer\n",
-    "trainer = Trainer(accelerator='gpu', devices=1,  max_epochs=30, logger=logger, auto_lr_find=True) #accumulate_grad_batches=2, overfit_batches=1, default_root_dir=\"lightning_logs/ResNet/checkpoints\"  \n",
-    "trainer.fit(model=lit_model, datamodule=dataset,)\n",
+    "trainer = Trainer(accelerator='gpu', devices=1,  max_epochs=60, logger=logger, auto_lr_find=True) #accumulate_grad_batches=2, overfit_batches=1, default_root_dir=\"lightning_logs/ResNet/checkpoints\"  \n",
+    "trainer.fit(model=lit_model, datamodule=dataset,ckpt_path='/Models_Parameters_Log/Test_Run/version_2/checkpoints/epoch=21-step=30954.ckpt')\n",
     "\n",
     "#add parameter below to trainer.fit to continue from a checkpoint\n",
-    "#ckpt_path='lightning_logs/Character_tokenizer_1/version_2/checkpoints/epoch=0-step=1294.ckpt'\n",
-    " #ckpt_path='lightning_logs/Character_tokenizer_1/version_4/checkpoints/epoch=15-step=20704.ckpt' )"
+    "#ckpt_path='/Models_Parameters_Log/Test_Run/version_2/checkpoints/epoch=21-step=30954.ckpt'\n"
    ]
   },
   {
@@ -852,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "5af48f70",
+   "id": "edcf9ade",
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "3a835c94",
+   "id": "0af31ef1",
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e1344629",
+   "id": "79a92d6d",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28f51ea6",
+   "id": "21b34253",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1051,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ac1ee44",
+   "id": "a7f435dc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1059,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d7153d2",
+   "id": "bdfba5c1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1067,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3df57f67",
+   "id": "362d05ac",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1075,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "bb9e68b7",
+   "id": "a4e04032",
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53a8ed18",
+   "id": "109fa5b1",
    "metadata": {},
    "outputs": [],
    "source": []
